--- a/build.gradle
+++ b/build.gradle
@@ -3,27 +3,27 @@ buildscript {
     // Define versions in a single place
     ext {
         // Sdk and tools
-        compileSdkVersion = 29
-        buildToolsVersion = '29.0.3'
+        compileSdkVersion = 31
+        buildToolsVersion = '31.0.0'
 
         libMinSdkVersion = 19
         appMinSdkVersion = 19
-        targetSdkVersion = 29
+        targetSdkVersion = 31
         versionCode = 29
         versionName = '1.0.0'
 
         // App dependencies
-        kotlin_version = "1.3.72"
-        core_ktx = "1.3.0"
-        appcompat = "1.1.0"
-        recyclerview = "1.1.0"
+        kotlin_version = "1.6.20"
+        core_ktx = "1.7.0"
+        appcompat = "1.4.1"
+        recyclerview = "1.2.1"
         permissionsdispatcher_ktx = "1.0.0-alpha2"
 
         //test dependencies
         junit = "4.12"
         test_ext = "1.1.1"
         espresso_core = "3.2.0"
-        leakcanary = "2.4"
+        leakcanary = "2.8.1"
     }
 
     repositories {
@@ -33,7 +33,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.0"
+        classpath 'com.android.tools.build:gradle:7.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
@@ -49,7 +49,7 @@ allprojects {
         maven { url 'https://maven.aliyun.com/repository/google' }
         maven { url 'https://maven.aliyun.com/repository/jcenter' }
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
