--- a/voicebutton/src/main/AndroidManifest.xml
+++ b/voicebutton/src/main/AndroidManifest.xml
@@ -1,2 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.lizhidan.voicebutton"></manifest>
+    package="com.lizhidan.voicebutton">
+
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+</manifest>
