--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$rootProject.ext.kotlin_version"
+    api "org.jetbrains.kotlin:kotlin-stdlib:$rootProject.ext.kotlin_version"
     implementation "androidx.core:core-ktx:$rootProject.ext.core_ktx"
     implementation "androidx.appcompat:appcompat:$rootProject.ext.appcompat"
     implementation project(path: ':voicebutton')
