--- a/voicebutton/build.gradle
+++ b/voicebutton/build.gradle
@@ -20,7 +20,7 @@ android {
 
 dependencies {
     compileOnly fileTree(dir: "libs", include: ["*.jar"])
-    compileOnly "org.jetbrains.kotlin:kotlin-stdlib:$rootProject.ext.kotlin_version"
+    api "org.jetbrains.kotlin:kotlin-stdlib:$rootProject.ext.kotlin_version"
     compileOnly "androidx.core:core-ktx:$rootProject.ext.core_ktx"
     compileOnly "androidx.appcompat:appcompat:$rootProject.ext.appcompat"
     implementation "androidx.annotation:annotation:1.3.0"
